Refactor logger and client messages.